--- a/CSS.css
+++ b/CSS.css
@@ -1,7 +1,9 @@
-body {background-color: #9ef7c3;
+body {background-color: skyblue;
+      font-family:arial;
         padding:10px }
 
 header{background-color:#ffffff;
+  background-image: url('background.jpg');
     height:90px;}
 
 footer {background-color: #0db4e7;
@@ -11,8 +13,7 @@ nav ul li{ list-style-type:none;
             float:left;
             width:25%;
             font-size: 20px;
-            text-align:center;
-            background-color: #0db4e7;}
+            text-align:center;}
     
 nav ul li a {display:block;
     padding:10px;
@@ -22,8 +23,15 @@ nav ul li a {display:block;
 nav ul li a:hover {background-color:#04a1d1;
             color:#000000;}
  
-nav{margin-bottom:10px;}
-    
+nav{margin-top:20px;
+    overflow:hidden;
+    background-image: url('background.jpg');
+    background-color:#0db4e7;
+    position:sticky;
+    top:0;
+    z-index : 10000}
+
+label{font-weight:bold;}
 
 h1 {text-align: center;
     padding-left:30px;
@@ -32,7 +40,7 @@ h1 {text-align: center;
 h2  {font-size: 40px;
     text-align:left;
     height: 50px;
-    width: 100%;
+    width: 98%;
     padding: 20px;
     Margin-right:50%;
     background-color: white;
@@ -46,6 +54,58 @@ h2  {font-size: 40px;
 #introduction, #sleep {width: 100%;
                 display:inline-block;}
 
-.text {width:800px;
-        padding-left:600px;
+.box {width:100%;
+    overflow: hidden;}
+.text {width:50%;
+      float:left;
         font-size: 20px;}
+
+#BetterSleep, .SubmitButton{text-decoration:none;
+            padding:20px 50px;
+            font-size:1.5rem;
+            position:relative;
+            margin:10px;
+            background:#000000;
+            color:#ffffff;
+            border-radius:30px;}
+            
+#chartIndicator{font-size:20px}
+#sleepList{display:none;}
+
+#video {width:39%;
+        height:315px;
+        float:left;
+        margin-right:10%}
+
+#socialimage{margin-right:10%;}
+
+
+  .chartMenu {
+    width: 100%;
+    height: 40px;
+    background: #1A1A1A;
+    color: rgba(255, 26, 104, 1);
+  }
+ 
+  .chartMenu p {
+    padding: 100px;
+    font-size: 20px;
+  }
+  .chartCard {
+    width: 100%;
+    height: 500px;
+    background: rgba(255, 26, 104, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .chartBox {
+    width: 700px;
+    padding: 20px;
+    border-radius: 20px;
+    border: solid 3px rgba(255, 26, 104, 1);
+    background: white;
+  }
+
+#surveyP1 {float:left;
+  width:40% ;}
